# verp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/verp/: _claude  agent.py  claude_dir.py  claude_permission_hook.py  cli.py  db.py  debug.py  git.py  monitor.py  paths.py  project.py  status.py  time.py
src/verp/_versions/10/: claude_settings.json  track.sh
src/verp/_versions/11/: claude_settings.json
src/verp/_versions/14/: track.sh
src/verp/_versions/15/: track.sh
src/verp/_versions/17/: claude_settings.json
src/verp/_versions/20/kitty/: verp.conf
src/verp/_versions/3/: claude_settings.json  track.py
src/verp/_versions/4/: claude_settings.json  track.sh
src/verp/_versions/5/: claude_settings.json  track.sh
src/verp/_versions/6/: track.sh
src/verp/_versions/7/: track.sh
src/verp/_versions/8/: track.sh
src/verp/_versions/9/: claude_settings.json  track.sh
src/verp/_versions/latest/: claude_settings.json  global_settings.json  track.py  track.sh
src/verp/focus/: __init__.py  _base.py  _proc.py
src/verp/focus/_focusers/: _iterm2.py  _kitty.py  _linux_x11.py  _macos.py  _tmux.py  _wezterm.py
tests/: test_migrations.py
