[project]
name = "verp"
version = "0.1.0"
description = "Project worktree manager"
requires-python = ">=3.11"
dependencies = ["argcomplete", "rich", "prompt_toolkit"]

[project.scripts]
verp = "verp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/verp"]

[dependency-groups]
dev = ["black", "mypy", "pytest"]

[tool.black]
line-length = 80

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
